--- a/MasterPage.master
+++ b/MasterPage.master
@@ -6,9 +6,11 @@
 <head runat="server">
     <title></title>
     <link rel="stylesheet" href="Bootstrap.css" />
-   <%-- <link rel="stylesheet" href="StyleSheet.css" />--%>
+    <%-- <link rel="stylesheet" href="StyleSheet.css" />--%>
     <style>
-        body {font-family: "Lato", sans-serif;}
+        body {
+            font-family: "Lato", sans-serif;
+        }
 
 
         .sidebar {
@@ -37,7 +39,7 @@
 
         /*.main {
             margin-left: 160px;*/ /* Same as the width of the sidenav */
-            /*padding: 0px 10px;
+        /*padding: 0px 10px;
         }*/
         /*
 @media screen and (max-height: 450px) {
@@ -47,6 +49,9 @@
         .auto-style1 {
             height: 45px;
         }
+
+        .auto-style2 {
+        }
     </style>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -54,16 +59,25 @@
 </head>
 <body>
     <form id="form1" runat="server">
-
+        <div style="background: blue; width: 100%; height: 68px;"
+            class="auto-style2">
+        </div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
         <table style="width: 100%; left: 0">
             <tr style="background-color: blueviolet">
                 <td class="auto-style1" style="left: 0px">
                     <img src="Images/test_logo.png" width="100px" /></td>
-                <td class="auto-style1" style="left: 0px;text-align:center">
+                <td class="auto-style1" style="left: 0px; text-align: center">
                     <h3>Test Management System</h3>
                 </td>
-                <td class="auto-style1" style="left: 0px;text-align:right">
+                <td class="auto-style1" style="left: 0px; text-align: right">
                     <h6>Welcome Users</h6>
+                    <asp:Label ID="lblUser" runat="server" Text="Hello "></asp:Label>
                 </td>
 
             </tr>
@@ -80,12 +94,24 @@
                                     <a href="ExcelUpload.aspx" align="left" style="text-align: left; font-size: 16px;">Home</a>
                                 </td>
                             </tr>
+                             <div id="div1" runat="server" visible="false">
                             <tr>
-                                <td style="width:10%; text-align: right;">
+                                <td style="width: 10%; text-align: right;">
                                     <img src="Images/h.png" align="right" height="40px;" />
                                 </td>
-                                <td style="width:90%; text-align: left;">
-                                    <a href="ExcelUpload.aspx" align="left" style="text-align: left; font-size: 16px;">Dashboard</a>
+                                <td style="width: 90%; text-align: left;">
+                                   
+                                        <a href="ExcelUpload.aspx" align="left" style="text-align: left; font-size: 16px;">Dashboard</a>
+                                    
+                                </td>
+                            </tr>
+                            </div>
+                            <tr>
+                                <td style="width: 10%; text-align: right;">
+                                    <img src="Images/h.png" align="right" height="40px;" />
+                                </td>
+                                <td style="width: 90%; text-align: left;">
+                                    <a href="ExcelUpload.aspx" align="left" style="text-align: left; font-size: 16px;">Excel Summary</a>
                                 </td>
                             </tr>
                         </table>
