--- a/MasterPage.master
+++ b/MasterPage.master
@@ -1,124 +1,58 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="MasterPage" %>
 
-
 <!DOCTYPE html>
 <html>
 <head runat="server">
     <title></title>
-    <link rel="stylesheet" href="Bootstrap.css" />
-    <%-- <link rel="stylesheet" href="StyleSheet.css" />--%>
-    <style>
-        body {
-            font-family: "Lato", sans-serif;
-        }
+    <link rel="stylesheet" href="Resources/css/Ultimate.css" />
 
-
-        .sidebar {
-            height: 100%;
-            width: 160px;
-            position: fixed;
-            z-index: 1;
-            top: 55px;
-            /*left: 0;*/
-            background-color: brown;
-            overflow-x: hidden;
-            /*padding-top: 16px;*/
-        }
-
-            .sidebar a {
-                padding: 6px 0px 6px 0px;
-                text-decoration: none;
-                font-size: 10px;
-                color: #818181;
-                display: block;
-            }
-
-                .sidebar a:hover {
-                    color: #f1f1f1;
-                }
-
-        /*.main {
-            margin-left: 160px;*/ /* Same as the width of the sidenav */
-        /*padding: 0px 10px;
-        }*/
-        /*
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}*/
-        .auto-style1 {
-            height: 45px;
-        }
-
-        .auto-style2 {
-        }
-    </style>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
-        <div style="background: blue; width: 100%; height: 68px;"
-            class="auto-style2">
+
+        <!--Header-->
+        <div style="border:solid">
+            <img src="Resources/images/Amazon_logo.svg.png" class="logo-style" />
+            <div style="padding-left: 10px;vertical-align:middle; justify-content: center;display: block;font-size:20px;">
+                NFR PRO SYstem
+            </div>
+            <div style="padding-left: 400px;vertical-align:middle; justify-content: center;display: block;font-size:20px;">
+                TRUIST MANAGEMENT SYSTEM
+            </div>
+            <div style="padding-left:80%; font-size:10px;justify-content:right;margin-right:100px">
+                <asp:Label ID="lblUserName" runat="server" Text="Label"></asp:Label>
+            </div>
         </div>
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <table style="width: 100%; left: 0">
-            <tr style="background-color: blueviolet">
-                <td class="auto-style1" style="left: 0px">
-                    <img src="Images/test_logo.png" width="100px" /></td>
-                <td class="auto-style1" style="left: 0px; text-align: center">
-                    <h3>Test Management System</h3>
-                </td>
-                <td class="auto-style1" style="left: 0px; text-align: right">
-                    <h6>Welcome Users</h6>
-                    <asp:Label ID="lblUser" runat="server" Text="Hello "></asp:Label>
-                </td>
 
-            </tr>
+        <table style="width: 100%">
             <tr>
-                <td style="top: 80px; width: 160px">
+                <td>
+                    <!-- The sidebar -->
                     <div class="sidebar">
-
-                        <table style="background-color: rgba(0, 0, 0, 0);">
-                            <tr>
-                                <td>
-                                    <img src="Images/h.png" align="right" height="40px" />
-                                </td>
-                                <td>
-                                    <a href="ExcelUpload.aspx" align="left" style="text-align: left; font-size: 16px;">Home</a>
-                                </td>
-                            </tr>
-                             <div id="div1" runat="server" visible="false">
-                            <tr>
-                                <td style="width: 10%; text-align: right;">
-                                    <img src="Images/h.png" align="right" height="40px;" />
-                                </td>
-                                <td style="width: 90%; text-align: left;">
-                                   
-                                        <a href="ExcelUpload.aspx" align="left" style="text-align: left; font-size: 16px;">Dashboard</a>
-                                    
-                                </td>
-                            </tr>
+                        <div class="sidebar">
+                            <a href="Dashboard.aspx"><i class="fa fa-fw fa-home"></i>Home</a>
+                            <%--<a href="Landing.aspx"><i class="fa fa-fw fa-dashboard"></i>Dashboard</a>--%>
+                            <div id="div1" runat="server"><a href="UploadExcelNFR.aspx"><i class="fa fa-fw fa-upload"></i>Upload NFR</a></div>
+                            <a href="CompareSLA.aspx"><i class="fa fa-fw fa-compare"></i>Compare NFR</a>
+                            <%--<a href="Contacts.aspx"><i class="fa fa-fw fa-contact"></i>Contact</a>--%>
+                            <button type="button" class="dropdown-btn">
+                                Administration 
+                                <i class="fa fa-caret-down"></i>
+                            </button>
+                            <div class="dropdown-container">
+                                <a href="#services"><i class="fa fa-fw fa-gear"></i>User Setup</a>
+                                <a href="UserAdministration.aspx"><i class="fa fa-fw fa-users"></i>User Roles</a>
+                                <a href="#services"><i class="fa fa-fw fa-image"></i>Others</a>
+                                
                             </div>
-                            <tr>
-                                <td style="width: 10%; text-align: right;">
-                                    <img src="Images/h.png" align="right" height="40px;" />
-                                </td>
-                                <td style="width: 90%; text-align: left;">
-                                    <a href="ExcelUpload.aspx" align="left" style="text-align: left; font-size: 16px;">Excel Summary</a>
-                                </td>
-                            </tr>
-                        </table>
+                        </div>
                     </div>
 
                 </td>
-                <td colspan="2" style="top: 80px; text-align: left">
+                <td>
                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                     </asp:ContentPlaceHolder>
                 </td>
@@ -127,4 +61,6 @@
 
     </form>
 </body>
+ <script src="Resources/js/CommonJS.js" type="text/javascript"></script>
+
 </html>
