--- a/MasterPage.master
+++ b/MasterPage.master
@@ -14,16 +14,26 @@
     <form id="form1" runat="server">
 
         <!--Header-->
-        <div style="border:solid">
+        <div class="banner-style">
             <img src="Resources/images/Amazon_logo.svg.png" class="logo-style" />
-            <div style="padding-left: 10px;vertical-align:middle; justify-content: center;display: block;font-size:20px;">
-                NFR PRO SYstem
+            <div style="position: absolute; top: 15px; left: 160px; color: rgba(255,255,255,0.5); font-size: 24px; margin: 0;">| </div>
+            <div style="position: absolute; padding-left: 200px; justify-content: center; font-family: Mukta">
+                | 
+                <p class="banner-title">Performance Engineering Services</p>
+                <p class="banner-title" style="line-height: 20px;">NON-FUNCTIONAL REQUIREMENT MGMT (NFR) PORTAL</p>
+
             </div>
-            <div style="padding-left: 400px;vertical-align:middle; justify-content: center;display: block;font-size:20px;">
-                TRUIST MANAGEMENT SYSTEM
+            <div style="position: absolute; padding-left: 1200px; justify-content: right;">
+                <p>
+                    <h5><a style="color: rgba(255,255,255,0.5)" href="Dashboard.aspx" target="_blank"></a></h5>
+                </p>
+
             </div>
-            <div style="padding-left:80%; font-size:10px;justify-content:right;margin-right:100px">
-                <asp:Label ID="lblUserName" runat="server" Text="Label"></asp:Label>
+            <div style="position: absolute; padding-left: 1600px; justify-content: right;">
+                <p>
+                    <h5 style="color: rgba(255,255,255,0.5)">Welcome,
+                        <asp:Label ID="lblUserName" runat="server" Text="Label"></asp:Label></h5>
+                </p>
             </div>
         </div>
 
@@ -46,7 +56,7 @@
                                 <a href="#services"><i class="fa fa-fw fa-gear"></i>User Setup</a>
                                 <a href="UserAdministration.aspx"><i class="fa fa-fw fa-users"></i>User Roles</a>
                                 <a href="#services"><i class="fa fa-fw fa-image"></i>Others</a>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -61,6 +71,6 @@
 
     </form>
 </body>
- <script src="Resources/js/CommonJS.js" type="text/javascript"></script>
+<script src="Resources/js/CommonJS.js" type="text/javascript"></script>
 
 </html>
