--- a/Resources/css/Ultimate.css
+++ b/Resources/css/Ultimate.css
@@ -17,6 +17,10 @@ body {
     background-color: #fff
 }
 
+.redstar {
+    color: red;
+}
+
 table {
     border: 0px solid #ccc;
     border-collapse: collapse;
@@ -415,7 +419,7 @@ table {
     background: linear-gradient(169deg, rgba(21,1,42,1) 45%, rgba(147,9,232,1) 100%);
     top: 0px;
     width: 100%;
-    height: 50px;
+    height: 80px;
     left: 0;
     position: fixed;
     color:  white;
@@ -733,4 +737,29 @@ legend.box-border {
     font-size: 12px !important;
     font-weight: bold !important;
     text-align: left !important;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: black;
+    z-index: 99;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+    -moz-opacity: 0.8;
+    min-height: 100%;
+    width: 100%;
+}
+
+.loading {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 10pt;
+    border: 5px solid #67CFF5;
+    width: 200px;
+    height: 100px;
+    display: none;
+    position: fixed;
+    background-color: White;
+    z-index: 999;
 }
