--- a/Resources/css/Ultimate.old.css
+++ b/Resources/css/Ultimate.old.css
@@ -34,7 +34,7 @@ table {
     }
 
     table th, table td {
-        padding: 0px;
+        padding: 5px;
         border: 0px solid #ccc;
     }
 
@@ -366,9 +366,9 @@ table {
 
 /* Style the sidebar - fixed full height */
 .sidebar {
-    height: 100%;
+    /*height: 100%;*/
     width: 160px;
-    position: fixed;
+    /*position: fixed;*/
     z-index: 1;
     top: 80px;
     left: 0;
@@ -422,7 +422,7 @@ table {
     width: 100%;
     height: 80px;
     left: 0;
-    position: fixed;
+    /*position: fixed;*/
     color:  white;
     font-family:inherit;
 }
@@ -509,8 +509,6 @@ table {
     padding: .375rem .75rem;
     font-size: 14px;
     border-radius: .25rem;
-    margin-top:20px;
-    margin-right:10px;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
 }
 
